test/2/type/sub-field-field.err
type error: test/2/type/sub-field-field.ploy:2:21-31: type annotation actual struct type has 3 fields; expected 2. struct field 1 -> actual type: (Int Int Int)
  s:(Int (Int Int)) = (0 (0 0 0))
                      ~~~~~~~~~~~
note: test/2/type/sub-field-field.ploy:2:3-17: struct field 1 -> expected type: (Int Int)
  s:(Int (Int Int)) = (0 (0 0 0))
    ~~~~~~~~~~~~~~~
