test/2/type/sub-field-field.ploy

s:(Int (Int Int)) = (0 (0 0 0))

main = exit.0@s

